--- a/test/cpp/lazy/CMakeLists.txt
+++ b/test/cpp/lazy/CMakeLists.txt
@@ -38,7 +38,7 @@ if(USE_CUDA)
 elseif(USE_ROCM)
   target_link_libraries(test_lazy PRIVATE
     hiprtc::hiprtc
-    hip::amdhip64
+    hip::host
     ${TORCH_CUDA_LIBRARIES})
 
   target_compile_definitions(test_lazy PRIVATE USE_ROCM)
