concatenate -mllvm flags to prevent CMake deduplication

--- a/aten/src/ATen/CMakeLists.txt
+++ b/aten/src/ATen/CMakeLists.txt
@@ -337,11 +337,20 @@ IF(USE_MSLK)
     set_source_files_properties(${mslk_native_rocm_hip} PROPERTIES LANGUAGE HIP)
 
     # Add additional HIP compiler flags for performance
+    #
+    # WARNING: do not add a space between `-mllvm` and `flag-to-pass` like
+    # `-mllvm -enable-post-misched=0`. Concatenate them with `=` instead like
+    # below.
+    #
+    # The reason is that CMake performs flag deduplication, so when there
+    # are multiple `-mllvm` flags like `-mllvm -flag-foo=0 -mllvm -flag-bar=1`,
+    # only the first `-mllvm` is kept so the compiler receives instead
+    # `-mllvm -flag-foo=0 -flag-bar=1`. By inserting `=` in between,
+    # `-mllvm=-flag-foo=0` becomes one single flag so deduplication doesn't
+    # remove `-mllvm`.
     set(MSLK_HIP_FLAGS
-      -mllvm
-      -enable-post-misched=0
-      -mllvm
-      -greedy-reverse-local-assignment=1
+      -mllvm=-enable-post-misched=0
+      -mllvm=-greedy-reverse-local-assignment=1
       -fhip-new-launch-api)
     if(DEFINED ROCM_VERSION_DEV AND ROCM_VERSION_DEV VERSION_LESS "7.2.0")
         list(PREPEND MSLK_HIP_FLAGS -mllvm -amdgpu-coerce-illegal-types=1)
